feat: add RBAC + request validation (Phase 2 complete)
RBAC:
- ApiKeyProperties: List<KeyEntry> with key+role pairs
- JwtAuthenticationManager: extracts 'role' claim → SimpleGrantedAuthority
- ApiKeyAuthenticationManager: looks up role via properties → SimpleGrantedAuthority
- SecurityConfig: /admin/** → ROLE_ADMIN, entry point 401, accessDeniedHandler 403

Request Validation:
- RequestValidationWebFilter: headers, Content-Type, Content-Length, JSON body
- ValidationErrorHandler: DataBufferLimitException → 413
- spring.codec.max-in-memory-size: 1MB

Docs:
- ManualTestingGuide.md: curl commands for auth, RBAC, validation