@@ -5,10 +5,12 @@ import org.springframework.context.annotation.Primary;
 import org.springframework.security.authentication.ReactiveAuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 import reactor.core.publisher.Mono;
 
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @Primary
@@ -28,8 +30,13 @@ public class JwtAuthenticationManager implements ReactiveAuthenticationManager {
         }
         String token = credentials.toString();
         return Mono.justOrEmpty(jwtService.parse(token))
-                .map(Claims::getSubject)
-                .map(subject -> new UsernamePasswordAuthenticationToken(subject, null, Collections.emptyList()))
-                .cast(Authentication.class);
+                .map(claims -> {
+                    String subject = claims.getSubject();
+                    String role = claims.get("role", String.class);
+                    List<SimpleGrantedAuthority> authorities = role != null
+                            ? List.of(new SimpleGrantedAuthority(role))
+                            : Collections.emptyList();
+                    return (Authentication) new UsernamePasswordAuthenticationToken(subject, null, authorities);
+                });
     }
 }
